# UMAT_source_transformation

./: .gitignore  README.md  START_HERE.md  UMAT_Source_transformation_user_manual.docx  app.py  pyproject.toml  run_json_pipeline.py  transform_from_json.py  validate_all_local.py  verify_abaqus_local.py
examples/: elastic_minimal.json  hin_reference.json
json_files/: README.md  UMAT_ECL_TEMP.json  UMAT_ECO.json  UMAT_HIN.json  UMAT_NKH_1.02.json  UMAT_PCL.json  UMAT_PCLI.json  UMAT_PCLI_R.json  UMAT_PCLK.json  UMAT_PCO.json  UMAT_VPDCL.json  UMAT_VPDCL_R.json  UMAT_VPDCO.json  code_exp.json  code_imp.json  elastic.json  spin_elas_def.json  spin_elastic.json  visco_beam.json  visco_imp.json
json_files/plastic/: UMAT_NKH_1.02.json  UMAT_PCL.json  UMAT_PCLI.json  UMAT_PCLI_R.json  UMAT_PCLK.json  UMAT_PCO.json  UMAT_VPDCL.json  UMAT_VPDCL_R.json  UMAT_VPDCO.json  code_exp.json  code_imp.json  visco_beam.json  visco_imp.json
json_files_completed/: UMAT_ECL_TEMP.json  UMAT_ECO.json  UMAT_HIN.json  UMAT_NKH_1.02.json  UMAT_PCL.json  UMAT_PCLI.json  UMAT_PCLI_R.json  UMAT_PCLK.json  UMAT_PCO.json  UMAT_VPDCL.json  UMAT_VPDCL_R.json  UMAT_VPDCO.json  code_exp.json  code_imp.json  completion_report.json  completion_report.md  elastic.json  spin_elas_def.json  spin_elastic.json  visco_beam.json  visco_imp.json
new_user_umat_starter/: JSON_REFERENCE.md  README.md  TROUBLESHOOTING.md
new_user_umat_starter/scripts/: check_config.py  (+3 more)
templates/: new_umat_constitutive_template.json  new_umat_minimal_template.json
tools/: run_completed_json_batch.py
user_jsons/: README.md
(+67 files in other folders)
